# r6.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  bigint_helper.rs  bounded_iterator.rs  build.rs  complex.rs  datum.rs  eval_test.rs  macro.rs  numeric.rs  parser.rs  prelude.scm  primitive.rs  r5.rc  rational.rs  real.rs  repl.rs  runtime.rs  stack.rs  todo.txt
example/: hofstadter.scm  merge_sort.scm
src/: base.rs  bigint_helper.rs  cast.rs  compiler.rs  datum.rs  eqv.rs  error.rs  eval_test.rs  lexer.rs  lib.rs  num_trait.rs  number.rs  numeric.rs  parser.rs  primitive.rs  real.rs  runtime.rs  syntax.rs
tests/: eval_test.rs  parser_test.rs
